--- a/index.html
+++ b/index.html
@@ -70,8 +70,9 @@
                         <li>We developed an film option contract</li>
     <li>We began a business and financing plan</li>
                         <li>We secured a verbal deal, and prepared to mail the contract and option payment,
-                        <li>In February 2015 the deal was suddenly called off at the last second for reasons unknown to me</li>
-                        </ul>
+                        <li>In February 2015 the deal was suddenly called off by the Bosworth daughters for reasons unknown to us</li>
+                        <li>                        
+						</ul>
 						<p>The project is on hiatus indefinitely. If the Bosworth daughters ever change their mind, we sincerely hope they will <a href="http://www.vapor.pics" target="_blank">contact us</a>. &nbsp;We long for the day when we have the opportunity to collaborate on adapting this great book into a great film.</p>
 						<p><strong>Find yourself a copy of this little-known, hard-to-find gem of a book.  You will love it.</strong></p>
                         </ul>
@@ -460,8 +461,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 				  <li>&bull; <em>All the Dark Places</em> &copy; 1968 J. Allan Bosworth</li>
                   <li>&bull; Libary of Congress Catalog Card Number 68-105596</li>
                   <li>&bull; Website Theme Design: <a href="http://html5up.net">HTML5 UP</a></li>
-                  <li>&bull; Photography and Unofficial ADP Fanclub President:</li>
-                    <li>Joe Wells - Vapor (vapor.pics)</li>
+                  <li>&bull; Photography/Web Team: Vapor (<a href="http://vapor.pics/" target="_blank">vapor.pics</a>)</li>
 				</ul>
 			</footer>
 
