Working top/side-bar
Can’t quite get it to do what I want.  I figure it out, but time for
bed.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<!-- Header -->
 			<header id="header">
 				<a href="#" class="image avatar"><img src="images/adp-small-cover1.png" alt="" /></a>
-				<h1></h1>
+				<h1>All the Dark Places</h1>
 			</header>
 
 		<!-- Main -->
