Typos and text tweaks
Most noticed by NW

--- a/index.html
+++ b/index.html
@@ -64,18 +64,17 @@
 						</header>
 						<p>Starting in 2010, after directing the short film <em><a href="http://thisisjoewells.com/howtofeelmovie.com/" target="_blank">How To Feel In America Today</a></em>, we (Vapor) endeavored to adapt <em>All the Dark Places</em> into a motion picture.</p>
 						<ul>
-                        <li>We began outlining and structure the book for the screen</li>
+                        <li>We began outlining and structuring the book for the screen</li>
                         <li>We began concept art</li>
-                        <li>We researched and found J. Allan's Bosworth daughters (Mr. Bosworth is deceased)</li>
-                        <li>We developed an film option contract</li>
-    <li>We began a business and financing plan</li>
-                        <li>We secured a verbal deal, and prepared to mail the contract and option payment,
-                        <li>In February 2015 the deal was suddenly called off by the Bosworth daughters for reasons unknown to us</li>
-                        <li>                        
+                        <li>We researched and found J. Allan's Bosworth family (Mr. Bosworth is deceased)</li>
+                        <li>We developed a film option contract</li>
+    					<li>We began a business and financing plan</li>
+                        <li>We secured a verbal deal, and prepared to mail the contract and option payment</li>
+                        <li>In February 2015 the deal was suddenly called off by the Bosworth family for reasons unknown to us</li>                       
 						</ul>
 						<p>The project is on hiatus indefinitely. If the Bosworth daughters ever change their mind, we sincerely hope they will <a href="http://www.vapor.pics" target="_blank">contact us</a>. &nbsp;We long for the day when we have the opportunity to collaborate on adapting this great book into a great film.</p>
 						<p><strong>Find yourself a copy of this little-known, hard-to-find gem of a book.  You will love it.</strong></p>
-                        </ul>
+                        
                       <ul class="actions">
 								<li><a href="http://www.amazon.com/All-dark-places-Allan-Bosworth/dp/B0006BTYPU/ref=sr_1_2?ie=UTF8&qid=1354818979&sr=8-2&keywords=%22all+the+dark+places%22+book" target="_blank" class="button">Find It Used on Amazon</a></li>
                                 <li><a href="http://www.thriftbooks.com/w/all-the-dark-places/8241097/#isbn=B0006BTYPU" target="_blank" class="button">Find It Used on Thrift Books</a></li>
