--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         <li>We secured a verbal deal, and prepared to mail the contract and option payment</li>
                         <li>In February 2015 the deal was suddenly called off by the Bosworth family for reasons unknown to us</li>                       
 						</ul>
-						<p>The project is on hiatus indefinitely. If the Bosworth daughters ever change their mind, we sincerely hope they will <a href="http://www.vapor.pics" target="_blank">contact us</a>. &nbsp;We long for the day when we have the opportunity to collaborate on adapting this great book into a great film.</p>
+						<p>The project is on hiatus indefinitely. If the Bosworth family ever change their minds, we sincerely hope they will <a href="http://www.vapor.pics" target="_blank">contact us</a>. &nbsp;We long for the opportunity to collaborate on adapting this great book into a great film.</p>
 						<p><strong>Find yourself a copy of this little-known, hard-to-find gem of a book.  You will love it.</strong></p>
                         
                       <ul class="actions">
